Fix cover images

--- a/01-comming-soon/css/responsive.css
+++ b/01-comming-soon/css/responsive.css
@@ -1,51 +1,100 @@
-
-
 /* Screens Resolution : 992px
 -------------------------------------------------------------------------- */
 @media only screen and (max-width: 1200px) {
-	
+
 	/* ---------------------------------
 	4. RIGHT SECTION
 	--------------------------------- */
 
-	#rounded-countdown{ width: 100%; }
-	
+	#rounded-countdown {
+		width: 100%;
+	}
+
 }
 
 /* Screens Resolution : 992px
 -------------------------------------------------------------------------- */
 @media only screen and (max-width: 992px) {
-	
-	
-	.main-area{ position: relative; height: 200vh; }
+
+
+	.main-area {
+		position: relative;
+		height: 200vh;
+	}
 
 
 	/* ---------------------------------
 	3. LEFT SECTION
 	--------------------------------- */
 
-	.left-section{ float: none; width: 100%; height: 50%; }
-	
-	.left-section .main-content{ padding: 40px 0; }
-	
-	.main-content .email-input-area{ width: 100%; }
-	
-	.main-content .email-input-area .email-input{ padding: 0 115px 0 20px; }
-	
-	.main-content .email-input-area .submit-btn{ width: 100px; } 
-	
-	.left-section .footer-icons > li > a > i{ height: 30px; line-height: 28px; width: 30px; }
-	
-	
+	.left-section {
+		float: none;
+		width: 100%;
+		height: 50%;
+	}
+
+	.left-section .main-content {
+		padding: 20px;
+	}
+
+	.main-content .email-input-area {
+		width: 100%;
+	}
+
+	.main-content .email-input-area .email-input {
+		padding: 0 115px 0 20px;
+	}
+
+	.main-content .email-input-area .submit-btn {
+		width: 100px;
+	}
+
+	.left-section .footer-icons>li>a>i {
+		height: 30px;
+		line-height: 28px;
+		width: 30px;
+	}
+
+
 	/* ---------------------------------
 	4. RIGHT SECTION
 	--------------------------------- */
 
-	.right-section{ top: 50%; bottom: auto; width: 100%; height: 50%; }
+	.right-section {
+		top: 50%;
+		bottom: auto;
+		width: 100%;
+		height: 50%;
+	}
 
-	.date-countdown{ width: 100%; }
-	
-	.date-countdown .time_circles > div > h4{ font-size: .7em!important; }
+	.date-countdown {
+		width: 100%;
+	}
+
+	.date-countdown .time_circles>div>h4 {
+		font-size: .7em !important;
+	}
+
+
+	/* 
+	.left-section {
+		z-index: 2;
+	}
+
+	.right-section {
+		top: 0%;
+	}
+
+	.main-content {
+		margin-top: 400px;
+		box-shadow: 0 5px 10px rgb(255 255 255 / 70%), 0px 0px 100px 0 rgb(0 0 0) inset;
+		border-radius: 10px;
+		color: white;
+	}
+
+	.main-content p {
+		color: white;
+	} */
 
 }
 
@@ -53,17 +102,29 @@
 /* Screens Resolution : 767px
 -------------------------------------------------------------------------- */
 @media only screen and (max-width: 767px) {
-	
+
 	/* ---------------------------------
 	1. PRIMARY STYLES
 	--------------------------------- */
 
-	p{ line-height: 1.4; }
+	p {
+		line-height: 1.4;
+	}
 
-	h1{ font-size: 2.8em; line-height: 1; }
-	h2{ font-size: 2.2em; line-height: 1.1; }
-	h3{ font-size: 1.8em; }
-	
+	h1 {
+		font-size: 2.8em;
+		line-height: 1;
+	}
+
+	h2 {
+		font-size: 2.2em;
+		line-height: 1.1;
+	}
+
+	h3 {
+		font-size: 1.8em;
+	}
+
 }
 
 /* Screens Resolution : 479px
@@ -74,20 +135,16 @@
 	1. PRIMARY STYLES
 	--------------------------------- */
 
-	body{ font-size: 12px;  }
+	body {
+		font-size: 12px;
+	}
 
 }
 
 /* Screens Resolution : 359px
 -------------------------------------------------------------------------- */
-@media only screen and (max-width: 359px) {
-	
-	
-}
+@media only screen and (max-width: 359px) {}
 
 /* Screens Resolution : 290px
 -------------------------------------------------------------------------- */
-@media only screen and (max-width: 290px) {
-	
-	
-}
+@media only screen and (max-width: 290px) {}
