--- a/01-comming-soon/css/responsive.css
+++ b/01-comming-soon/css/responsive.css
@@ -19,7 +19,7 @@
 
 	.main-area {
 		position: relative;
-		height: 200vh;
+		/* height: 200vh; */
 	}
 
 
@@ -75,26 +75,39 @@
 		font-size: .7em !important;
 	}
 
+	/** Customs */
+	.container {
+		padding: 0;
+	}
 
-	/* 
 	.left-section {
 		z-index: 2;
+		height: 100%;
 	}
 
 	.right-section {
-		top: 0%;
+		top: 70px;
+		height: calc(100vh - 70px);
 	}
 
 	.main-content {
-		margin-top: 400px;
+		/* margin-top: 480px; */
 		box-shadow: 0 5px 10px rgb(255 255 255 / 70%), 0px 0px 100px 0 rgb(0 0 0) inset;
 		border-radius: 10px;
 		color: white;
+		position: absolute;
+		bottom: 100px;
 	}
 
 	.main-content p {
 		color: white;
-	} */
+	}
+
+	.left-section .logo {
+		top: 0;
+		left: 0;
+		height: 70px;
+	}
 
 }
 
